feat: single file out

--- a/swiftgen/config.json
+++ b/swiftgen/config.json
@@ -2,5 +2,7 @@
   "inputDir": "tests",
   "outputDir": "output",
   "outputPrefix": "",
-  "outputSuffix": ".swift"
+  "outputSuffix": ".swift",
+  "combineIntoSingleFile": true,
+  "singleFileName": "generated"
 }
