feat: jsString generated variable

--- a/swiftgen/src/config/config.json
+++ b/swiftgen/src/config/config.json
@@ -1,6 +1,6 @@
 {
   "inputDir": "tests",
-  "outputDir": "~/Downloads/",
+  "outputDir": "output",
   "outputPrefix": "",
   "outputSuffix": ".swift",
   "outputFileName": "TypeSwift"
