--- a/swiftgen/package.json
+++ b/swiftgen/package.json
@@ -1,15 +1,21 @@
 {
   "name": "swiftgen",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Generate typesafe Swift code using input TypeScript code.",
   "main": "dist/swiftgen.js",
   "scripts": {
     "build": "tsc && npm run copy-config && npm run copy-tests",
-    "copy-config": "cpx src/config/config.json dist/config/",
-    "copy-tests": "cpx tests/**/* dist/tests",
+    "copy-config": "cpx \"src/config/config.json\" \"dist/config/\" --verbose",
+    "copy-tests": "cpx \"tests/**/*\" \"dist/tests/\" --verbose",
     "start": "node dist/swiftgen.js"
   },
-  "keywords": [],
+  "files": [
+    "dist",
+    "src",
+    "README.md",
+    "LICENSE"
+  ],
+  "keywords": ["swift", "typescript", "codegen"],
   "author": {
     "name": "Justin Bush",
     "email": "buzsh@users.noreply.github.com",
@@ -18,7 +24,7 @@
   "homepage": "https://typeswift.org",
   "repository": {
     "type": "git",
-    "url": "https://github.com/TypeSwift/TypeSwift.git"
+    "url": "git+https://github.com/TypeSwift/SwiftGen.git"
   },
   "license": "MIT",
   "dependencies": {
